24152 : fixed spacing issue

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_controls.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_controls.less
@@ -181,12 +181,6 @@ option:empty {
     }
 }
 
-[class*='admin__control-'] {
-    + .admin__control-support-text {
-        margin-left: @action__outer-indent;
-    }
-}
-
 //
 //  Service text or control. Can be used to add text or 'Use Default Value' checkbox
 //  ---------------------------------------------
